@@ -26,9 +26,8 @@ package com.questhelper.helpers.quests.romeoandjuliet;
 
 import com.questhelper.panel.PanelDetails;
 import com.questhelper.questhelpers.BasicQuestHelper;
-import com.questhelper.requirements.Requirement;
-import com.questhelper.requirements.conditional.Conditions;
 import com.questhelper.requirements.item.ItemRequirement;
+import static com.questhelper.requirements.util.LogicHelper.and;
 import com.questhelper.requirements.zone.Zone;
 import com.questhelper.requirements.zone.ZoneRequirement;
 import com.questhelper.rewards.QuestPointReward;
@@ -36,67 +35,44 @@ import com.questhelper.steps.ConditionalStep;
 import com.questhelper.steps.NpcStep;
 import com.questhelper.steps.ObjectStep;
 import com.questhelper.steps.QuestStep;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import net.runelite.api.coords.WorldPoint;
 import net.runelite.api.gameval.ItemID;
 import net.runelite.api.gameval.NpcID;
 import net.runelite.api.gameval.ObjectID;
 
-import java.util.*;
-
 public class RomeoAndJuliet extends BasicQuestHelper
 {
-	//Items Required
-	ItemRequirement cadavaBerry, letter, potion;
+	// Required items
+	ItemRequirement cadavaBerry;
 
-	Requirement inJulietRoom;
-
-	QuestStep talkToRomeo, goUpToJuliet, talkToJuliet, giveLetterToRomeo, talkToLawrence, talkToApothecary, goUpToJuliet2, givePotionToJuliet, finishQuest;
-
-	//Zones
+	// Zones
 	Zone julietRoom;
 
-	@Override
-	public Map<Integer, QuestStep> loadSteps()
-	{
-		initializeRequirements();
-		setupConditions();
-		setupSteps();
-		Map<Integer, QuestStep> steps = new HashMap<>();
+	// Miscellaneous requirements
+	ItemRequirement letter;
+	ItemRequirement cadavaPotion;
+	ZoneRequirement inJulietRoom;
 
-		steps.put(0, talkToRomeo);
+	// Steps
+	NpcStep talkToRomeo;
 
-		ConditionalStep tellJulietAboutRomeo = new ConditionalStep(this, goUpToJuliet);
-		tellJulietAboutRomeo.addStep(inJulietRoom, talkToJuliet);
+	ObjectStep goUpToJuliet;
+	NpcStep talkToJuliet;
 
-		steps.put(10, tellJulietAboutRomeo);
-		steps.put(20, giveLetterToRomeo);
-		steps.put(30, talkToLawrence);
-		steps.put(40, talkToApothecary);
+	ObjectStep goDownstairsToGiveLetterToRomeo;
+	NpcStep giveLetterToRomeo;
 
-		ConditionalStep bringPotionToJuliet = new ConditionalStep(this, talkToApothecary);
-		bringPotionToJuliet.addStep(new Conditions(potion, inJulietRoom), givePotionToJuliet);
-		bringPotionToJuliet.addStep(potion, goUpToJuliet2);
+	NpcStep talkToLawrence;
+	NpcStep talkToApothecary;
+	ObjectStep goUpToJuliet2;
+	NpcStep givePotionToJuliet;
 
-		steps.put(50, bringPotionToJuliet);
-		steps.put(60, finishQuest);
-
-		return steps;
-	}
-
-	@Override
-	protected void setupRequirements()
-	{
-		cadavaBerry = new ItemRequirement("Cadava berries", ItemID.CADAVABERRIES);
-		cadavaBerry.setTooltip("You can pick some from bushes south east of Varrock");
-		letter = new ItemRequirement("Message", ItemID.JULIETMESSAGE);
-		letter.setTooltip("You can get another from Juliet");
-		potion = new ItemRequirement("Cadava potion", ItemID.CADAVA);
-	}
-
-	public void setupConditions()
-	{
-		inJulietRoom = new ZoneRequirement(julietRoom);
-	}
+	ObjectStep goDownstairsToFinishQuest;
+	NpcStep finishQuest;
 
 	@Override
 	protected void setupZones()
@@ -104,36 +80,87 @@ public class RomeoAndJuliet extends BasicQuestHelper
 		julietRoom = new Zone(new WorldPoint(3147, 3425, 1), new WorldPoint(3166, 3443, 1));
 	}
 
+	@Override
+	protected void setupRequirements()
+	{
+		inJulietRoom = new ZoneRequirement(julietRoom);
+
+		cadavaBerry = new ItemRequirement("Cadava berries", ItemID.CADAVABERRIES);
+		cadavaBerry.setTooltip("You can pick some from bushes south east of Varrock");
+		letter = new ItemRequirement("Message", ItemID.JULIETMESSAGE);
+		letter.setTooltip("You can get another from Juliet");
+		cadavaPotion = new ItemRequirement("Cadava potion", ItemID.CADAVA);
+	}
+
 	public void setupSteps()
 	{
 		talkToRomeo = new NpcStep(this, NpcID.ROMEO, new WorldPoint(3211, 3422, 0), "Talk to Romeo in Varrock Square.");
 		talkToRomeo.addDialogStep("Yes, I have seen her actually!");
 		talkToRomeo.addDialogStep("Yes, ok, I'll let her know.");
+		talkToRomeo.addDialogStep("Yes.");
 		goUpToJuliet = new ObjectStep(this, ObjectID.FAI_VARROCK_STAIRS_TALLER, new WorldPoint(3157, 3436, 0), "Talk to Juliet in the house west of Varrock.");
 		goUpToJuliet.addDialogStep("Ok, thanks.");
 		talkToJuliet = new NpcStep(this, NpcID.JULIET, new WorldPoint(3158, 3427, 1), "Talk to Juliet in the house west of Varrock.");
 		talkToJuliet.addSubSteps(goUpToJuliet);
 
+		goDownstairsToGiveLetterToRomeo = new ObjectStep(this, ObjectID.FAI_VARROCK_STAIRS_TOP, new WorldPoint(3156, 3435, 1), "Bring the letter to Romeo in Varrock Square.", letter);
 		giveLetterToRomeo = new NpcStep(this, NpcID.ROMEO, new WorldPoint(3211, 3422, 0), "Bring the letter to Romeo in Varrock Square.", letter);
+		giveLetterToRomeo.addSubSteps(goDownstairsToGiveLetterToRomeo);
+
 		talkToLawrence = new NpcStep(this, NpcID.FATHER_LAWRENCE, new WorldPoint(3254, 3483, 0), "Talk to Father Lawrence in north east Varrock.");
 		talkToLawrence.addDialogStep("Ok, thanks.");
 		talkToApothecary = new NpcStep(this, NpcID.APOTHECARY, new WorldPoint(3195, 3405, 0), "Bring the cadava berries to the Apothecary in south west Varrock.", cadavaBerry);
 		talkToApothecary.addDialogStep("Talk about something else.");
 		talkToApothecary.addDialogStep("Talk about Romeo & Juliet.");
-		goUpToJuliet2 = new ObjectStep(this, ObjectID.FAI_VARROCK_STAIRS_TALLER, new WorldPoint(3157, 3436, 0), "Bring the potion to Juliet in the house west of Varrock.", potion);
-		givePotionToJuliet = new NpcStep(this, NpcID.JULIET, new WorldPoint(3158, 3427, 1), "Bring the potion to Juliet in the house west of Varrock.", potion);
+		goUpToJuliet2 = new ObjectStep(this, ObjectID.FAI_VARROCK_STAIRS_TALLER, new WorldPoint(3157, 3436, 0), "Bring the potion to Juliet in the house west of Varrock.", cadavaPotion);
+		givePotionToJuliet = new NpcStep(this, NpcID.JULIET, new WorldPoint(3158, 3427, 1), "Bring the potion to Juliet in the house west of Varrock.", cadavaPotion);
 		givePotionToJuliet.addSubSteps(goUpToJuliet2);
 
+		goDownstairsToFinishQuest = new ObjectStep(this, ObjectID.FAI_VARROCK_STAIRS_TOP, new WorldPoint(3156, 3435, 1), "Talk to Romeo in Varrock Square to finish the quest.");
 		finishQuest = new NpcStep(this, NpcID.ROMEO, new WorldPoint(3211, 3422, 0), "Talk to Romeo in Varrock Square to finish the quest.");
+		finishQuest.addSubSteps(goDownstairsToFinishQuest);
+	}
 
+	@Override
+	public Map<Integer, QuestStep> loadSteps()
+	{
+		initializeRequirements();
+		setupSteps();
+
+		var steps = new HashMap<Integer, QuestStep>();
+
+		steps.put(0, talkToRomeo);
+
+		var tellJulietAboutRomeo = new ConditionalStep(this, goUpToJuliet);
+		tellJulietAboutRomeo.addStep(inJulietRoom, talkToJuliet);
+
+		steps.put(10, tellJulietAboutRomeo);
+
+		var giveLetterToRomeo = new ConditionalStep(this, this.giveLetterToRomeo);
+		giveLetterToRomeo.addStep(inJulietRoom, goDownstairsToGiveLetterToRomeo);
+		steps.put(20, giveLetterToRomeo);
+		steps.put(30, talkToLawrence);
+		steps.put(40, talkToApothecary);
+
+		var bringPotionToJuliet = new ConditionalStep(this, talkToApothecary);
+		bringPotionToJuliet.addStep(and(cadavaPotion, inJulietRoom), givePotionToJuliet);
+		bringPotionToJuliet.addStep(cadavaPotion, goUpToJuliet2);
+
+		steps.put(50, bringPotionToJuliet);
+
+		var cFinishQuest = new ConditionalStep(this, finishQuest);
+		giveLetterToRomeo.addStep(inJulietRoom, goDownstairsToFinishQuest);
+		steps.put(60, cFinishQuest);
+
+		return steps;
 	}
 
 	@Override
 	public List<ItemRequirement> getItemRequirements()
 	{
-		ArrayList<ItemRequirement> reqs = new ArrayList<>();
-		reqs.add(cadavaBerry);
-		return reqs;
+		return List.of(
+			cadavaBerry
+		);
 	}
 
 	@Override
@@ -145,11 +172,26 @@ public class RomeoAndJuliet extends BasicQuestHelper
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		List<PanelDetails> allSteps = new ArrayList<>();
+		var sections = new ArrayList<PanelDetails>();
 
-		allSteps.add(new PanelDetails("Helping Romeo", Arrays.asList(talkToRomeo, talkToJuliet, giveLetterToRomeo)));
-		allSteps.add(new PanelDetails("Hatching a plan", Arrays.asList(talkToLawrence, talkToApothecary), cadavaBerry));
-		allSteps.add(new PanelDetails("Enact the plan", Arrays.asList(givePotionToJuliet, finishQuest)));
-		return allSteps;
+		sections.add(new PanelDetails("Helping Romeo", List.of(
+			talkToRomeo,
+			talkToJuliet,
+			giveLetterToRomeo
+		)));
+
+		sections.add(new PanelDetails("Hatching a plan", List.of(
+			talkToLawrence,
+			talkToApothecary
+		), List.of(
+			cadavaBerry
+		)));
+
+		sections.add(new PanelDetails("Enact the plan", List.of(
+			givePotionToJuliet,
+			finishQuest
+		)));
+
+		return sections;
 	}
 }
